# DeepResearch

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: 00_PRODUCT_BRIEF.md  01_ARCHITECTURE.md  02_GLOBAL_INVARIANTS.md  03_MILESTONE_GATES.md  04_TASK_SPECS.md  05_TESTING_AND_EVALUATION.md  06_DATA_AND_SCHEMA_CONTRACTS.md  07_MCP_TOOL_CONTRACT.md  08_BENCHMARKING_AND_ASTABENCH_PATH.md  09_CLOUD_AND_OPERATIONS.md  10_COPILOT_TASK_PROMPT_TEMPLATE.md  11_HUMAN_REVIEW_CHECKLIST.md  SELF_REVIEW_REPORT.md
docs/adr/: 0001-ingestion-scaling-bulk-datasets-and-sharding.md  README.md  TEMPLATE.md
docs/prompts/: STAGE_0_TASK_0_1_STARTER_PROMPT.md
docs/research/: ingestion_api_confirmation.md
litgraph/: __init__.py  config.py  schemas.py
litgraph/examples/: __init__.py  load_mock_corpus.py  mock_corpus.py  smoke_ingest.py  write_demo_snapshot.py
litgraph/examples/data/: mock_corpus.json
litgraph/ingestion/: __init__.py  base.py  checksums.py  errors.py  openalex.py  raw_store.py  semantic_scholar.py  transport.py
project_control/: current_milestone.yaml
tests/: conftest.py  test_artifact_paths_are_under_project_root.py  test_config_loads_from_fixture.py  test_import_all_modules.py  test_ingestion_clients.py  test_mock_corpus.py  test_raw_store.py  test_schemas.py
tests/fixtures/: config.fixture.toml  openalex_search.json  openalex_work.json  semantic_scholar_paper.json  semantic_scholar_search.json
tools/: validate_docs.py
